# Yeet_or_Eat

./: .gitignore  README.md  package-lock.json  package.json  run_backend.py
backend/: .env.example  app.py  config_settings.py  db_models.py  extensions.py  models.py  pyproject.toml  requirements.txt  run_backend.py  supabase_token.py  yelp_sync.py  yelp_test.py
docs/: onboarding.md
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/Backups/: MyReviewsOld.jsx  SubmitReviewOld.jsx
frontend/public/: index.html
frontend/src/: App.js  index.css  supabaseClient.js
frontend/src/components/: Filters.css  Filters.jsx  Header.css  Header.jsx  ReviewCard.css  ReviewCard.js  ReviewForm.jsx  SearchForRestaurant.css  SearchForRestaurant.jsx
frontend/src/pages/: AdminPanel.js  AdminPanel.jsx  AlreadyAte.css  AlreadyAte.js  Authentication.css  Authentication.js  EditProfile.css  EditProfile.js  EditReview.jsx  Feed.css  Feed.js  GonnaEat.css  GonnaEat.js  MyReviews.css  MyReviews.jsx  Profile.css  Profile.js  PublicProfile.js  SubmitReview.css  SubmitReview.jsx  ViewReview.css  ViewReview.jsx  WannaEat.css  WannaEat.js
src/: App.js
src/pages/: Feed.js  Profile.js  SubmitReview.js
